--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
 
-      <label for="course">Course:</label>
-      <input type="text" id="course" name="course" required>
+      <label for="department">Department:</label>
+      <input type="text" id="department" name="department" required>
 
-      <label for="year">Year:</label>
-      <input type="number" id="year" name="year" required>
+      <label for="rollNo">Roll No:</label>
+      <input type="number" id="rollNo" name="rollNo" required>
 
       <button type="submit">Submit</button>
     </form>
